Fix Ready to Start Building section mobile button layout

--- a/Landing Page/src/style/landpage.less
+++ b/Landing Page/src/style/landpage.less
@@ -94,10 +94,6 @@
     margin-top: 60px;
 }
 
-.inner-page .section-ready-to-build .header-btn-box {
-    width: 1080px;
-}
-
 .inner-page a.btn-light {
     background-color: rgb(0, 191, 165);
     height: 50px;
@@ -671,8 +667,8 @@
         z-index: 9;
     }
 
-    path{
-        fill:#000000 !important;
+    path {
+        fill: #000000 !important;
     }
 
     @media @phone {
@@ -735,7 +731,8 @@
     font-family: "source sans pro";
     font-weight: 400;
 }
-.core-competence-content-item-title{
+
+.core-competence-content-item-title {
     padding: 40px 40px 0 40px;
 }
 
@@ -754,6 +751,10 @@
     justify-content: center;
     flex-direction: column;
     padding: 80px 0 80px 0;
+}
+
+.inner-page .section-ready-to-build .header-btn-box {
+    width: 1080px;
 }
 
 .ready-to-build-title {
@@ -783,6 +784,7 @@
     font-weight: 300;
     line-height: 36px;
     text-align: center;
+
     @media @phone {
         font-size: 18px;
     }
@@ -1203,8 +1205,10 @@
         margin-top: 60px;
     }
 
+
     .inner-page .section-ready-to-build .header-btn-box {
         height: 250px;
+        width: 100%;
     }
 
     .inner-page .btn-header.btn-light {
@@ -1277,7 +1281,7 @@
     .contact-item-list {
         width: 100%;
     }
-    
+
 }
 
 @media(max-width:599px) {
